--- a/web-server/views/dynamicPartials/Encounter.ejs
+++ b/web-server/views/dynamicPartials/Encounter.ejs
@@ -48,17 +48,17 @@
 <div class="form-group">
 <label for='Reference.subject'>subject</label>
 <input type='text' id='Encounter.subject' name='subject' title='name: subject  minOccurs: 0  maxOccurs: 1  type: Reference  '
-            value="<%= data && data.subject ? data.subject.reference : '' %>">Reference
+                        value="<%= data && data.subject ? data.subject.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Reference.episodeOfCare'>episodeOfCare</label>
 <input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' title='name: episodeOfCare  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-            value="<%= data && data.episodeOfCare ? data.episodeOfCare.reference : '' %>">Reference
+                        value="<%= data && data.episodeOfCare ? data.episodeOfCare.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Reference.basedOn'>basedOn</label>
 <input type='text' id='Encounter.basedOn' name='basedOn' title='name: basedOn  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-            value="<%= data && data.basedOn ? data.basedOn.reference : '' %>">Reference
+                        value="<%= data && data.basedOn ? data.basedOn.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Encounter.Participant.participant'>participant</label>
@@ -68,7 +68,7 @@
 <div class="form-group">
 <label for='Reference.appointment'>appointment</label>
 <input type='text' id='Encounter.appointment' name='appointment' title='name: appointment  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-            value="<%= data && data.appointment ? data.appointment.reference : '' %>">Reference
+                        value="<%= data && data.appointment ? data.appointment.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Period.period'>period</label>
@@ -88,7 +88,7 @@
 <div class="form-group">
 <label for='Reference.reasonReference'>reasonReference</label>
 <input type='text' id='Encounter.reasonReference' name='reasonReference' title='name: reasonReference  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-            value="<%= data && data.reasonReference ? data.reasonReference.reference : '' %>">Reference
+                        value="<%= data && data.reasonReference ? data.reasonReference.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Encounter.Diagnosis.diagnosis'>diagnosis</label>
@@ -98,7 +98,7 @@
 <div class="form-group">
 <label for='Reference.account'>account</label>
 <input type='text' id='Encounter.account' name='account' title='name: account  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-            value="<%= data && data.account ? data.account.reference : '' %>">Reference
+                        value="<%= data && data.account ? data.account.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Encounter.Hospitalization.hospitalization'>hospitalization</label>
@@ -113,12 +113,12 @@
 <div class="form-group">
 <label for='Reference.serviceProvider'>serviceProvider</label>
 <input type='text' id='Encounter.serviceProvider' name='serviceProvider' title='name: serviceProvider  minOccurs: 0  maxOccurs: 1  type: Reference  '
-            value="<%= data && data.serviceProvider ? data.serviceProvider.reference : '' %>">Reference
+                        value="<%= data && data.serviceProvider ? data.serviceProvider.reference : '' %>">Reference</input>
             </div>
 <div class="form-group">
 <label for='Reference.partOf'>partOf</label>
 <input type='text' id='Encounter.partOf' name='partOf' title='name: partOf  minOccurs: 0  maxOccurs: 1  type: Reference  '
-            value="<%= data && data.partOf ? data.partOf.reference : '' %>">Reference
+                        value="<%= data && data.partOf ? data.partOf.reference : '' %>">Reference</input>
             </div>
 </form>
     <div>
