--- a/web-server/views/dynamicPartials/Patient.ejs
+++ b/web-server/views/dynamicPartials/Patient.ejs
@@ -92,5 +92,7 @@
 <input type='text' id='Patient.link' name='link' title='name: link  type: Patient.Link  minOccurs: 0  maxOccurs: unbounded  '
                 value="<%= data && data.link ? data.link : '' %>">Patient.Link
                 </div>
-</form>
+   <button type="submit" id="saveResourceButton" name="saveResourceButton">Save Resource</button>
+        </form>
+
     <div>
