--- a/web-server/views/dynamicPartials/Encounter.ejs
+++ b/web-server/views/dynamicPartials/Encounter.ejs
@@ -120,5 +120,7 @@
 <input type='text' id='Encounter.partOf' name='partOf' title='name: partOf  minOccurs: 0  maxOccurs: 1  type: Reference  '
                         value="<%= data && data.partOf ? data.partOf.reference : '' %>">Reference</input>
             </div>
-</form>
+   <button type="submit" id="saveResourceButton" name="saveResourceButton">Save Resource</button>
+        </form>
+
     <div>
