--- a/web-server/views/partials/Search/searchPatientForm.ejs
+++ b/web-server/views/partials/Search/searchPatientForm.ejs
@@ -1,5 +1,5 @@
-    <div>
-      <h5>Patient Search</h5>
+    <div style="background-color: lightblue;">
+      <h5>Patient Search Form</h5>
         <form id="searchForm">
           <label for="surname">Surname:</label>
           <input type="text" id="surname" name="surname" value="" ></br>
