--- a/web-server/views/partials/Patient/patientDetail.ejs
+++ b/web-server/views/partials/Patient/patientDetail.ejs
@@ -1,5 +1,6 @@
-<div>
-  <h3>Patient Details</h3>
+<h3>Patient Detail</h3>
+<div style="background-color: lightblue; padding: 10px;">
+
   <form id="patientDetailsForm">
     <div>
       <label for="resourceType"></label>
