--- a/web-server/views/partials/Search/patientSearchResults.ejs
+++ b/web-server/views/partials/Search/patientSearchResults.ejs
@@ -1,3 +1,4 @@
+<div style="background-color: lightblue; padding: 10px;">
 <table id="searchResults">
   <thead>
     <tr>
@@ -29,4 +30,5 @@
     <% } %>
   </tbody>
 </table>
+</div>
 
