--- a/web-server/views/partials/Search/searchResourceResults.ejs
+++ b/web-server/views/partials/Search/searchResourceResults.ejs
@@ -1,5 +1,6 @@
 <!-- views/partials/entryPartial.ejs -->
 <h3>All Resources for this Patient</h3>
+<div style="background-color: lightblue; padding: 10px;">
 <div class="entry">
   <table id="searchResourceResults">
     <th>Id</th>
@@ -11,4 +12,5 @@
   
   </table>
 
+</div>
 </div>
