--- a/web-server/views/partials/Search/searchPatientForm.ejs
+++ b/web-server/views/partials/Search/searchPatientForm.ejs
@@ -1,4 +1,4 @@
-    <div style="background-color: lightblue;">
+<div style="background-color: lightblue; padding: 10px;">
       <h5>Patient Search Form</h5>
         <form id="searchForm">
           <label for="surname">Surname:</label>
