--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -28,7 +28,7 @@
                     <% } %>
 
 
-                      <div id="patientDetail" class="patientDetail"></div>
+                      <div id="patientDetail" class="patientDetail"></div></br>
                       <div id="resourceHistory" class="resourceHistory"></div>
           </div>
           <div class="col-md-6">
