--- a/web-server/views/dynamicPartials/Encounter.ejs
+++ b/web-server/views/dynamicPartials/Encounter.ejs
@@ -18,7 +18,7 @@
                 value="<%= data && data.status ? data.status : '' %>">EncounterStatus
                 </div>
 <div class="form-group">
-<label for='Encounter.StatusHistory.statusHistory'>hello</label>
+<label for='Encounter.StatusHistory.statusHistory'>statusHistory</label>
 <input type='text' id='Encounter.statusHistory' name='statusHistory' title='name: statusHistory  type: Encounter.StatusHistory  minOccurs: 0  maxOccurs: unbounded  '
                 value="<%= data && data.statusHistory ? data.statusHistory : '' %>">Encounter.StatusHistory
                 </div>
